# bluebubbles-linux

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  plan.md  pyproject.toml
data/: com.github.bluebubbles-linux.desktop
src/bluebubbles_linux/: __init__.py  application.py  main.py
src/bluebubbles_linux/api/: __init__.py  client.py  models.py  websocket.py
src/bluebubbles_linux/services/: __init__.py
src/bluebubbles_linux/state/: __init__.py  cache.py
src/bluebubbles_linux/ui/: __init__.py  main_window.py  side_panel.py
src/bluebubbles_linux/ui/widgets/: __init__.py
src/bluebubbles_linux/utils/: __init__.py  config.py  debounce.py  links.py
tests/: __init__.py  test_api.py  test_cache.py  test_chat_list_updates.py  test_debounce.py
